# Text-To-Video

./: .gitmodules  README.md
Android/: build.gradle  local.properties
Android/app/: build.gradle
Android/app/src/main/: AndroidManifest.xml
Android/gradle/wrapper/: gradle-wrapper.properties
Legal/: YoutubeComplianceCSChat.html
Server/Elastic Search Dictionary/: add_dictionary_to_elastic_script.py  dictionary.py
Server/Video_API/: .gitignore  Cargo.toml
Server/Video_API/src/: main.rs
Server/Video_API/src/clip/: clip.rs
Server/Video_API/src/script/: script.rs
Server/Video_API/src/sentence/: mod.rs  sentence.rs
Server/Video_API/src/sub_sentence/: mod.rs  sub_sentence.rs
Server/Video_API/src/video/: mod.rs  video.rs
Server/Video_API/src/word_data/: mod.rs  word_data.rs
Server/Video_API/src/word_or_punctuation/: mod.rs  word_or_punctuation.rs
iOS/AppleFontEnd/: AppleFontEndApp.swift  ContentView.swift  OptionsScrollView.swift  RenderEngineSlider.swift  ScriptToVideoPage.swift  StoredGeneratedVideosPage.swift  VideoAutomationPage.swift  VideoCustomizationCard.swift
iOS/AppleFontEnd.xcodeproj/: project.pbxproj
iOS/AppleFontEnd/Assets.xcassets/Green_Building_Black_and_White.imageset/: Contents.json
iOS/AppleFontEnd/Assets.xcassets/Green_Building_Retro_Vintage.imageset/: Contents.json
iOS/AppleFontEnd/Assets.xcassets/cool_bg.imageset/: Contents.json
iOS/AppleFontEnd/Assets.xcassets/dreams-X2.imageset/: Contents.json
iOS/AppleFontEnd/Assets.xcassets/female_ai_voice_image_1.imageset/: Contents.json
(+22 files in other folders)
