[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.19.2", features = ["full"] }
elasticsearch = "7.14.0-alpha.1"
serde_json = "1.0.82"
reqwest = { version = "0.11", features = ["json"] }
actix-web = "4.1.0"
actix-cors = "0.6.4"
dotenv = "0.15.0"

[dependencies.uuid]
version = "1.1.2"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]